--- a/_drafts/2020-04-07-draft.md
+++ b/_drafts/2020-04-07-draft.md
@@ -76,6 +76,8 @@ A Godzilla Monster Light Up Hand Washing Sign - [Instructables](https://www.inst
 
 ALICE, a Kinect controlled FPV mini-mech, powered by CircuitPython on an Adafruit Feather - [Twitter](https://twitter.com/scottmonaghan/status/1245935357914308608).
 
+[![Thermal printers](../assets/20200407/thermal_printer.jpg)](https://rk.edu.pl/en/thermal-printers-makers-and-programmers/)
+
 Thermal printers for makers and programmers - includes a section on CircuitPython compatibility - [Twitter](https://rk.edu.pl/en/thermal-printers-makers-and-programmers/)
 
 [![Learning MicroPython on micro:bit](../assets/20200407/20200407microbit.jpg)](https://diyodemag.com/education/secret_code_learning_micropython_on_microbit_part_1)
