--- a/_drafts/2020-04-07-draft.md
+++ b/_drafts/2020-04-07-draft.md
@@ -222,9 +222,9 @@ What is the team up to this week? Let’s check in!
 
 **Dan**
 
-[![Dan](../assets/20200mdd/20200mdddan.jpg)](https://circuitpython.org/)
+I finished the initial BLE pulse oximeter library, and passed it on for use. But pulse oximeters are rare right now due to the Covid19 pandemic, so it may be a while before we can get some more for a project.
 
-
+I am finishing up the SAMD51 spurious flash writes fix to the UF2 bootloader. The bootloader now waits for the board voltage to be adequate and stable before launching the user program.
 
 **Jeff**
 
@@ -234,9 +234,11 @@ What is the team up to this week? Let’s check in!
 
 **Kattni**
 
-[![Kattni](../assets/20200mdd/20200mddkattni.jpg)](https://circuitpython.org/)
+[![Kattni](../assets/20200407/20200407kattni.jpg)](https://circuitpython.org/)
 
+Last week, I put together my first [video podcast for the Python on Hardware newsletter](https://www.youtube.com/watch?v=BOvTA80aui0&list=PLjF7R1fz_OOXRMjM7Sm0J2Xt6H81TdDev&index=3&t=0s). Previously, Phil and Limor would go through the newsletter on Ask an Engineer and we would post the clip separately to YouTube etc. later in the week. With all the recent changes, Phil and Limor's focus has shifted to Adafruit assisting with the COVID-19 outbreak and they didn't get a chance to go through it during the live stream. So, I was asked to create last week's video afterwards. This week, I was asked to put together the video in time for Ask an Engineer, and the plan is for me to continue to do so for the foreseeable future. If you want an overview of the newsletter each week, check it out. This week: [Python on Hardware Newsletter #76](https://www.youtube.com/watch?v=3WWVYowDg2M&list=PLjF7R1fz_OOXRMjM7Sm0J2Xt6H81TdDev&index=1)!
 
+We have a series of standards to which we hold the CircuitPython libraries. To that end, we have a list of Library Infrastructure Issues on [circuitpython.org/contributing](https://circuitpython.org/contributing) aggregated by our super helpful Adabot script (thanks @sommersoft for all the work on that!). As new products are on hold for now, it's a great time for spring cleaning, so I've been going through the list to get it taken care of. I'm starting with getting Read the Docs issues in order, as there are quite a few. We'll see what's next. The plan is to get through as much as possible. The list will never be empty, but I'll get it as clear as I can. Keep an eye on the list to stay up to date with the progress. 
 
 **Lucian**
 
