Add Weekly, Pydev, version numbers

--- a/_drafts/2020-04-07-draft.md
+++ b/_drafts/2020-04-07-draft.md
@@ -141,6 +141,10 @@ Connecting a MLX90393 magnetometer to an Adafruit Feather M0 running Circuitpyth
 
 The Learn Micropython website has other interesting projects - [Learn Micropython](http://www.learnmicropython.com/)
 
+PyDev of the Week – Pablo Galindo Salgado on [Mouse vs Python](https://www.blog.pythonlibrary.org/2020/04/06/pydev-of-the-week-pablo-galindo-salgado/)
+
+CircuitPython Weekly Meeting for April 6th, 2020 [on YouTube](https://youtu.be/lRxlsG850d4)
+
 #ICYDNCI What was the most popular, most clicked link, in [last week's newsletter](https://link)? [title](url).
 
 ## Made with Mu
@@ -304,13 +308,13 @@ As for other events, with the COVID pandemic, most in-person events are postpone
 
 ## Latest releases
 
-CircuitPython's stable release is [#.#.#](https://github.com/adafruit/circuitpython/releases/latest) and its unstable release is [#.#.#-##.#](https://github.com/adafruit/circuitpython/releases). New to CircuitPython? Start with our [Welcome to CircuitPython Guide](https://learn.adafruit.com/welcome-to-circuitpython).
+CircuitPython's stable release is [5.1.0](https://github.com/adafruit/circuitpython/releases/latest). New to CircuitPython? Start with our [Welcome to CircuitPython Guide](https://learn.adafruit.com/welcome-to-circuitpython).
 
-[2019####](https://github.com/adafruit/Adafruit_CircuitPython_Bundle/releases/latest) is the latest CircuitPython library bundle.
+[20190405](https://github.com/adafruit/Adafruit_CircuitPython_Bundle/releases/latest) is the latest CircuitPython library bundle.
 
-[v#.#.#](https://micropython.org/download) is the latest MicroPython release. Documentation for it is [here](http://docs.micropython.org/en/latest/pyboard/).
+[v1.12](https://micropython.org/download) is the latest MicroPython release. Documentation for it is [here](http://docs.micropython.org/en/latest/pyboard/).
 
-[#.#.#](https://www.python.org/downloads/) is the latest Python release. The latest pre-release version is [#.#.#](https://www.python.org/download/pre-releases/).
+[3.8.2](https://www.python.org/downloads/) is the latest Python release. The latest pre-release version is [3.9.0a5](https://www.python.org/download/pre-releases/).
 
 [1653 Stars](https://github.com/adafruit/circuitpython/stargazers) Like CircuitPython? [Star it on GitHub!](https://github.com/adafruit/circuitpython)
 
