--- a/_drafts/2020-04-07-draft.md
+++ b/_drafts/2020-04-07-draft.md
@@ -44,6 +44,32 @@ Teacher application deadline: April 3rd, Anywhere on Earth.
 
 The learning experience, called CS106A - Code in Place, will be an introductory programming course using the Python language, using material from the first half of Stanford University's established intro course, CS106A. It assumes no prior programming experience. You should expect to be working 15 to 20 hours a week and you will need an internet connection strong enough to stream video. Code in Place require no previous background in programming---just a willingness to work hard and a love for learning. It requires considerable dedication and hard work, over a course of 5 weeks.
 
+## Adafruit hardware now being certified as Open Source! 
+
+Adafruit is an Open Source software and hardware company. The [Open Source Hardware Association](https://certification.oshwa.org/) provides a certification process, the results of which offer an easy and straightforward way to indicate that your hardware meets a standard for Open Source. 
+
+To that end, we’ve been working on submitting certification applications for Adafruit hardware to the OSHWA. We’ve submitted a significant number of applications, and we’re super excited to announce that the first approvals have been granted. As we continue to receive certifications, we’ll keep you updated here.
+
+The following boards are now Open Source certified:
+
+* Adafruit Feather M0 Express
+* Adafruit Feather M4 Express
+* Adafruit Feather nRF52832 Bluefruit LE
+* Adafruit Feather nRF52840 Express
+* Adafruit Grand Central M4 Express
+* Adafruit HalloWing M0 Express
+* Adafruit ItsyBitsy M0 Express
+* Adafruit ItsyBitsy M4 Express
+* Adafruit Metro M4 Express AirLift
+* Adafruit NeoTrellis M4 Mainboard
+* Adafruit PyBadge
+* Adafruit PyGamer
+* Adafruit PyPortal
+* Adafruit PyRuler
+* Adafruit Trinket M0
+
+Check out the [Adafruit boards in the OSHWA Certified Projects Directory](https://certification.oshwa.org/list.html?q=adafruit) for all the details!
+
 ## Crowd Supply campaign opens for the CircuitBrains Deluxe
 
 [![CircuitBrains Deluxe](../assets/20200407/20200407brains.jpg)](https://www.crowdsupply.com/null-byte-labs/circuitbrains-deluxe)
