Added team input

--- a/_drafts/2020-04-14-draft.md
+++ b/_drafts/2020-04-14-draft.md
@@ -114,27 +114,33 @@ What is the team up to this week? Let’s check in!
 
 **Bryan**
 
-[![Bryan](../assets/20200mdd/20200mddbryan.jpg)](https://circuitpython.org/)
+This week I've been continuing to migrate our Libraries to GitHub Actions. Currently at about 50 done out of the first cohort of 130, though there are likely others waiting in the wings as well. In the interest of maintaining my sanity I've started interleaving work on the Actions migration with work on hardware and drivers.
 
+On that note I've started work on the LIS3DH library to bring it up to our current standards and start making room for new sensors. The [H3LIS331DL](https://www.st.com/en/mems-and-sensors/h3lis331dl.html) and [LIS331DH](https://www.st.com/en/mems-and-sensors/lis331hh.html) from ST are next up and are very close to the LIS3DH so I'm refactoring the LIS3DH library to pull the common code bits into a shared base class, and then making subclasses for each of the sensor types to handle differences like measurement range and data rate.
 
+Refactoring your code is the process of changing how your code is structured to improve how things are organized to make it more maintainable and to prepare it for later additions. It's a useful and necessary step when you're writing code because as a general rule, the choices you previously made about how the code should be organize no longer hold up. If you _don't_ refactor your code, you're liable to end up with code that is generally bad by just about every measure. 
 
 **Dan**
 
-[![Dan](../assets/20200mdd/20200mdddan.jpg)](https://circuitpython.org/)
+I finished the SAMD51 spurious flash writes fix to the UF2 bootloader and released it. But! - In the process I broke the SAMD21 bootloader updater, even though I thought I had tested it! So I reworked that code and will be making another bootloader release shortly.
 
-
+Since we want to make it easy for users to update their bootloaders, I added a new bootloader download section on each board page in circuitpython.org now. It includes short instructions about how to update. This makes [circuitpython.org](http://circuitpython.org/) even more of a one-stop shop for downloads now.
 
 **Jeff**
 
-[![Jeff](../assets/20200mdd/20200mddjeff.jpg)](https://circuitpython.org/)
+[![Jeff](../assets/20200414/20200414jeff.jpg)](https://circuitpython.org/)
 
+This week I contributed some improvements to ulab, and next I need to pull those changes into CircuitPython before we make our next release.
 
+On the Protomatter / LCD front, I've worked on improving error handling, because it has very specific requirements for the pins that can be used.  There's also at least one last memory usage bug, which has to be squashed before it can be included in CircuitPython.
+
+I also uploaded the little "feet" I've been using to stand up my LED modules to thingiverse -- use 2 or 3 of these and create a nice desk stand for these modules: https://www.thingiverse.com/thing:4270499
 
 **Kattni**
 
-[![Kattni](../assets/20200mdd/20200mddkattni.jpg)](https://circuitpython.org/)
+This week, I've continued working on the library infrastructure issues. Along the way, I've found some issues with our script called Adabot that generates the list of issues. The major issue wasn't a problem with Adabot, it was a change in the way a check worked, but it meant that we had a check that was triggering on every library when in fact none of them were failing. I worked with Sommersoft to get some updates applied to Adabot to fix that and a couple of other issues. We'll continue to update Adabot over time to ensure the checks on the library infrastructure page provide a place to find useful ways to contribute in the clearest way possible.
 
-
+When we updated Pylint and implemented Black, we forgot to add the Black check to the continuous integration. So, we ran a patch to add the check to all the libraries and promptly found that there was an issue with the way Black had been applied to most of the libraries. It turns out if you don't specify a "target version" of Python to Black, it tries to guess what version of Python you meant to use based on the file. We are targeting Python 3.5, but there was at least one file that had enough Python-2-type code in it, that Black assumed we wanted to target Python 2. So, when we added the check to the libraries targeting Python 3.5, the check failed. So, I'm currently going through nearly every library and rerunning the Black formatter with the proper Python version, and creating PRs for the updates. If you're able, please consider reviewing some of these relatively simple PRs. Thanks!
 
 **Lucian**
 
@@ -144,15 +150,21 @@ What is the team up to this week? Let’s check in!
 
 **Melissa**
 
-[![Melissa](../assets/20200mdd/20200mddmelissa.jpg)](https://circuitpython.org/)
+[![Melissa](../assets/20200414/20200414melissa.jpg)](https://circuitpython.org/)
 
+This past week I finished up the Web Bluetooth Dashboard Re-skin and updated [the associated learning guide](https://learn.adafruit.com/bluefruit-dashboard-web-bluetooth-chrome).
 
+I also updated the SPI driver in Blinka to use ioctl and is written in Python, so it doesn't rely on the SpiDev driver, which is not available on every platform. This allows SPI to be more accessible on more boards and operating systems.
+
+After that, I started another attempt to get the Onion Omega2+ working on Blinka and have been having more success so far. GPIO is working and next up is to try and get I2C, SPI, and UART working.
 
 **Scott**
 
-[![Scott](../assets/20200mdd/20200mddscott.jpg)](https://circuitpython.org/)
+This last week has been further testing of my initial lower power changes. It's been an exercise in finding things that I thought worked but don't. So, I've been bug finding across the platforms such as STM or iMX RT. Getting really close with it. Jeff and Dan both have reviewed it. I've also done reviews on Jeff's upcoming RGB display work.
 
+In the next week, I'll be releasing 5.2.0-beta.0 and the lower power work and rgb display stuff will be released in a subsequent beta. So, keep testing the new stuff and let us know if you find issues.
 
+After that, I'll either start working on ESP32-S2 testing and/or USB reverse engineering for a fever scanner. I'll likely stream it so make sure you are subscribed to Adafruit on Twitch and YouTube. Join the Discord too!
 
 ## Upcoming events!
 
