--- a/_drafts/2020-04-14-draft.md
+++ b/_drafts/2020-04-14-draft.md
@@ -53,9 +53,13 @@ Why Mu? Mu tries to make it as easy as possible to get started with programming 
 
 The number of supported microcontrollers and Single Board Computers (SBC) grows every week. This section outlines which boards have been added to [CircuitPython.org](https://circuitpython.org/).
 
-This week we had X new boards added!
+This week we had 5 new boards added!
 
-- board link
+- [Fomu](https://circuitpython.org/board/fomu)
+- [ThunderPack](https://circuitpython.org/board/thunderpack)
+- [Winterbloom Big Honking Button](https://circuitpython.org/board/winterbloom_big_honking_button)
+- [8086 Consultancy Commander](https://circuitpython.org/board/8086_commander/)
+- [BDMicro Vina M0](https://circuitpython.org/board/bdmicro_vina_m0)
 
 Looking for adding a new board to CircuitPython? It's highly encouraged! Adafruit has two guides to help you do so:
 
