adding tinypico radio youtube video link

--- a/_drafts/2020-04-14-draft.md
+++ b/_drafts/2020-04-14-draft.md
@@ -41,6 +41,11 @@ The CircuitPython team is going full steam ahead in development and rollout. We'
 
 Text
 
+[![Making an I/Q Style Radio](../assets/20200414/tinypico_radio_micropython.png)](https://youtu.be/y6PFM3ab1Qs)
+
+Making an I/Q style radio with a Tinypico running micropython. - [YouTube](https://youtu.be/y6PFM3ab1Qs) and [Github](https://github.com/thaaraak/Tinypico-Radio).
+
+
 #ICYDNCI What was the most popular, most clicked link, in [last week's newsletter](https://link)? [title](url).
 
 ## Made with Mu
