--- a/_drafts/2020-04-14-draft.md
+++ b/_drafts/2020-04-14-draft.md
@@ -41,6 +41,12 @@ The CircuitPython team is when ahead and released 5.2.0 stable after incorporati
 
 A CircuitPython-based Metronome with PyBadge - [GitHub](https://github.com/gmeader/pybadge) and [YouTube](https://youtu.be/ICGBr8tG5b0).
 
+[![Firetruck Using a Circuit Playground Express](../assets/20200414/20200414fire.jpg)](https://www.digikey.com/en/maker/projects/firetruck-rescue-lights-and-siren-using-a-circuit-playground-express/0edb3f54adad4c918143f891aa005b96)
+
+A firetruck bed with rescue lights and siren using a Circuit Playground Expresse - [Maker.io](https://www.digikey.com/en/maker/projects/firetruck-rescue-lights-and-siren-using-a-circuit-playground-express/0edb3f54adad4c918143f891aa005b96).
+
+30 Simple Tricks to Level Up Your Python Coding - [Medium](https://medium.com/better-programming/30-simple-tricks-to-level-up-your-python-coding-5b625c15b79a).
+
 #ICYDNCI What was the most popular, most clicked link, in [last week's newsletter](https://link)? [title](url).
 
 ## Made with Mu
