--- a/_drafts/2020-04-14-draft.md
+++ b/_drafts/2020-04-14-draft.md
@@ -41,6 +41,16 @@ The CircuitPython team is when ahead and released 5.2.0 stable after incorporati
 
 *Ed: Are you working on projects with CircuitPython or have good CircuitPython/MicroPython/Python news? Tag your material on Twitter with hashtag #CircuitPython. I'll scan and include items for the next newsletter. Thanks!*
 
+## Subreddits to subscribe to
+
+[![Python-related Subreddits](../assets/20200414/20200414reddit.jpg)](https://www.reddit.com/r/circuitpython/)
+
+Are you a Reddit fan? There are several subreddits you may wish to follow for Python-related news:
+
+- [r/Python](https://www.reddit.com/r/Python/) for all things Python
+- [r/circuitpython](https://www.reddit.com/r/circuitpython/) for CircuitPython related posts
+- [r/AdafruitIO](https://www.reddit.com/r/AdafruitIO/) for Adafruit IO news
+
 ## News from around the web!
 
 [![A CircuitPython-based Metronome with PyBadge](../assets/20200414/20200414metronome.jpg)](https://youtu.be/ICGBr8tG5b0)
