--- a/_drafts/2020-04-14-draft.md
+++ b/_drafts/2020-04-14-draft.md
@@ -46,6 +46,19 @@ This work paves the way for further work porting CircuitPython to this new chip 
 
 Adafruit is planning products based on the ESP32-S2 chip but has no ETA, especially with the COVID-19 pandemic. Adafruit recommends Digi-Key who is open and stocking various ESP32-S2 products - [Digi-Key](https://www.digikey.com/products/en/rf-if-and-rfid/rf-transceiver-modules/872?k=ESP32-S2&pkeyword=&sv=0&sf=0&FV=-8%7C872&quantity=&ColumnSort=0&page=1&pageSize=25).
 
+## Adafruit Submitting Board Designs to OSHWA
+
+Adafruit has always been an open source hardware company, predating the Open SOurce Hardware Association (OSHWA) certification process. With availability of personnel due to the COVID-19 pandemic, Adafruit has been submitting their board designs to OSHWA to receive their official certification. This includes a large number of CircuitPython compatible boards - [Blog](https://blog.adafruit.com/2020/04/08/25-adafruit-boards-have-been-certified-by-oshwa-oshw-oshwa-adafruit-ohsummit/).
+
+Some of the CircuitPython compatible boards which have received certification to date:
+
+* [Adafruit Feather M4 Express](https://certification.oshwa.org/us000242.html)
+* [Adafruit Feather nRF52840 Express](https://certification.oshwa.org/us000246.html)
+* [Adafruit Metro M4 Express AirLift](https://certification.oshwa.org/us000245.html)
+* [Adafruit PyPortal](https://certification.oshwa.org/us000248.html)
+
+See the growing list of certified boards - [OSHWA](https://certification.oshwa.org/list.html?q=Adafruit).
+
 ## The NFC Copy Cat Cybersecurity Tool
 
 [![NFC Copy Cat](../assets/20200414/20200414cat1.jpg)](https://electroniccats.com/blog/nfc-copy-cat-the-new-cybersecurity-tool-for-nfc-and-magspoof/)
