Add meeting links, pydev of the week and versions

--- a/_drafts/2020-04-14-draft.md
+++ b/_drafts/2020-04-14-draft.md
@@ -176,6 +176,9 @@ Animating a rotating box with (a real) python - [Twitter](https://twitter.com/lu
 
 Making an I/Q style radio with a Tinypico running micropython. - [YouTube](https://youtu.be/y6PFM3ab1Qs) and [Github](https://github.com/thaaraak/Tinypico-Radio).
 
+PyDev of the Week: Mike Pirnat on [Mouse vs Python](https://www.blog.pythonlibrary.org/2020/04/13/pydev-of-the-week-mike-pirnat/)
+
+CircuitPython Weekly for April 13th, 2020 [on YouTube](https://youtu.be/X0B2LHQXGlE) and [diode.zone](https://diode.zone/videos/watch/6fcc2dc6-908b-4ca7-83de-773a4c9ac011)
 
 #ICYDNCI What was the most popular, most clicked link, in [last week's newsletter](https://link)? [title](url).
 
@@ -346,13 +349,13 @@ As for other events, with the COVID pandemic, most in-person events are postpone
 
 ## Latest releases
 
-CircuitPython's stable release is [#.#.#](https://github.com/adafruit/circuitpython/releases/latest) and its unstable release is [#.#.#-##.#](https://github.com/adafruit/circuitpython/releases). New to CircuitPython? Start with our [Welcome to CircuitPython Guide](https://learn.adafruit.com/welcome-to-circuitpython).
+CircuitPython's stable release is [5.2.0](https://github.com/adafruit/circuitpython/releases/latest). New to CircuitPython? Start with our [Welcome to CircuitPython Guide](https://learn.adafruit.com/welcome-to-circuitpython).
 
-[2019####](https://github.com/adafruit/Adafruit_CircuitPython_Bundle/releases/latest) is the latest CircuitPython library bundle.
+[20200411](https://github.com/adafruit/Adafruit_CircuitPython_Bundle/releases/latest) is the latest CircuitPython library bundle.
 
-[v#.#.#](https://micropython.org/download) is the latest MicroPython release. Documentation for it is [here](http://docs.micropython.org/en/latest/pyboard/).
+[v1.12](https://micropython.org/download) is the latest MicroPython release. Documentation for it is [here](http://docs.micropython.org/en/latest/pyboard/).
 
-[#.#.#](https://www.python.org/downloads/) is the latest Python release. The latest pre-release version is [#.#.#](https://www.python.org/download/pre-releases/).
+[3.8.2](https://www.python.org/downloads/) is the latest Python release. The latest pre-release version is [3.9.0a5](https://www.python.org/download/pre-releases/).
 
 [1656 Stars](https://github.com/adafruit/circuitpython/stargazers) Like CircuitPython? [Star it on GitHub!](https://github.com/adafruit/circuitpython)
 
