--- a/_drafts/2020-04-14-draft.md
+++ b/_drafts/2020-04-14-draft.md
@@ -36,7 +36,7 @@ New features and improvements since 5.1.0
 * Fix reading pixel values from Pixelbuf. Thanks to @jepler.
 * Fix \_bleio.PacketBuffer when in server mode. Required for BLE Midi. Thanks to @tannewt
 
-## ESP32-S2 receieives TinyUSB Support
+## ESP32-S2 receives TinyUSB Support
 
 [![ESP32-S2](../assets/20200414/20200414esp32.jpg)](https://circuitpython.org/)
 
