last weeks most popular

--- a/_drafts/2020-04-14-draft.md
+++ b/_drafts/2020-04-14-draft.md
@@ -180,7 +180,11 @@ PyDev of the Week: Mike Pirnat on [Mouse vs Python](https://www.blog.pythonlibra
 
 CircuitPython Weekly for April 13th, 2020 on [YouTube](https://youtu.be/X0B2LHQXGlE) and [diode.zone](https://diode.zone/videos/watch/6fcc2dc6-908b-4ca7-83de-773a4c9ac011).
 
-#ICYDNCI What was the most popular, most clicked link, in [last week's newsletter](https://link)? [title](url).
+#ICYDNCI What was the most popular, most clicked link, in [last week's newsletter](https://www.adafruitdaily.com/2020/04/07/circuitpython-5-1-0-released-and-more-python-adafruit-circuitpython-circuitpython-micropython-thepsf-adafruit/)? [Stanford – a free introductory coding course in Python (short deadline)](https://compedu.stanford.edu/codeinplace/announcement/). 
+
+Note: Stanford states:
+
+> We were expecting hundreds, maybe as many as a thousand students. But people told their friends and we had an astounding 80,000 people who started an application. We were able to support 8,000 students, which is a small fraction of how many we would have liked. 
 
 ## Made with Mu
 
