new boards language update

--- a/_drafts/2020-04-14-draft.md
+++ b/_drafts/2020-04-14-draft.md
@@ -194,18 +194,23 @@ Why Mu? Mu tries to make it as easy as possible to get started with programming 
 
 ## New Boards Supported by CircuitPython
 
-The number of supported microcontrollers and Single Board Computers (SBC) grows every week. This section outlines which boards have been added to [CircuitPython.org](https://circuitpython.org/).
+The number of supported microcontrollers and Single Board Computers (SBC) grows every week.
 
-This week we had 6 new boards added!
+This week we had 6 boards in the CircuitPython pipeline:
 
-- [Fomu](https://circuitpython.org/board/fomu)
-- [ThunderPack](https://circuitpython.org/board/thunderpack)
+On CircuitPython.org:
+
+- [NFC Copy Cat](https://circuitpython.org/board/nfc_copy_cat/)
 - [Winterbloom Big Honking Button](https://circuitpython.org/board/winterbloom_big_honking_button)
 - [8086 Consultancy Commander](https://circuitpython.org/board/8086_commander/)
-- [BDMicro Vina M0](https://circuitpython.org/board/bdmicro_vina_m0)
-- [NFC Copy Cat](https://circuitpython.org/board/nfc_copy_cat/)
 
-Looking for adding a new board to CircuitPython? It's highly encouraged! Adafruit has two guides to help you do so:
+Software Support via 5.2.0:
+
+- BDMicro Vina M0
+- ThunderPack
+- Fomu
+
+Looking for adding a new board to CircuitPython? It's highly encouraged! Adafruit has guides to help you do so:
 
 - [How to Add a New Board to CircuitPython](https://learn.adafruit.com/how-to-add-a-new-board-to-circuitpython/overview)
 - [How to add a New Board to the circuitpython.org website](https://learn.adafruit.com/how-to-add-a-new-board-to-the-circuitpython-org-website)
