--- a/_drafts/2020-04-21-draft.md
+++ b/_drafts/2020-04-21-draft.md
@@ -156,9 +156,9 @@ What is the team up to this week? Let’s check in!
 
 **Jeff**
 
-[![Jeff](../assets/20200mdd/20200mddjeff.jpg)](https://circuitpython.org/)
+[![Jeff](../assets/20200421/20200421jeff.jpg)](https://circuitpython.org/)
 
-
+Work on RGB Matrix support in CircuitPython continues.  The initial Pull Request is accepted, but there's still work to do to make the API easier to use.  Here, I'm testing the wiring for the Feather nRF52840 Express.  While the guide will focus on the Feather M4 Express—because it has a compatible shield and doesn't require custom wiring—we'll also include wiring guidance for Feather nRF52840 Express and Sense, ItsyBitsy M4, and ItsyBitsy nRF52840.
 
 **Kattni**
 
