--- a/_drafts/2020-04-21-draft.md
+++ b/_drafts/2020-04-21-draft.md
@@ -180,9 +180,15 @@ Work on RGB Matrix support in CircuitPython continues.  The initial Pull Request
 
 **Scott**
 
-[![Scott](../assets/20200mdd/20200mddscott.jpg)](https://circuitpython.org/)
+[![Scott](../assets/20200421/20200421scott.gif)](https://circuitpython.org/)
 
+I'm getting closer and closer to wrapping up the lower power work. While I wait for review cycles I've started a couple other projects.
 
+Last week I took my first glimpse at the ESP32-S2 by getting TinyUSB running on the Saola dev board. I streamed my adventures last Friday on the Adafruit channels and posted it - [YouTube](https://www.youtube.com/watch?v=5zq8RHXVdSI). I'll likely be streaming this Friday as well at 2pm Pacific. My next step is to establish the port folder in CircuitPython and start connecting the CircuitPython build system to the ESP-IDF build system. I've been lots of help from UnexpectedMaker and Espressif folks so thanks to them!
+
+I've been reviewing lots of awesome PRs and also attending the Python Language Summit which is online just like PyCon - [via YouTube](https://www.youtube.com/channel/UCMjMBMGt0WJQLeluw6qNJuA/videos).
+
+Tuesday night Ladyada got me a dump of the USB traffic for a fever scanner. I've been hacking on the protocol to extract the image and the maximum temperature. The goal is to build an open source app to connect to the device rather than the proprietary Windows app that the manufacturer provides.
 
 ## Upcoming events!
 
