--- a/_drafts/2020-04-21-draft.md
+++ b/_drafts/2020-04-21-draft.md
@@ -174,9 +174,11 @@ Work on RGB Matrix support in CircuitPython continues.  The initial Pull Request
 
 **Melissa**
 
-[![Melissa](../assets/20200mdd/20200mddmelissa.jpg)](https://circuitpython.org/)
+[![Melissa](../assets/20200421/20200421melissa.jpg)](https://circuitpython.org/)
 
+This past week, I was focused on getting the Onion Omega2+ working with Blinka. I had previously been attempting to get it working with OpenWRT. I switched over to using the OnionOS that comes on the board by default and I was able to get I2C and UART working in addition to the GPIO. SPI was still having some difficulty reading values even though the correct signals were appearing. I put that on hold for the moment, but expect to finish it up soon.
 
+After that, I switched over to writing the SPI module for the external CircuitPython BitBangIO library. This is to manually flip the GPIO pins for boards that have neither the BitBangIO module or working hardware SPI. It actually worked well on the Raspberry Pi, but ran pretty slowly on the Jetson Nano. It would still work for communicating with sensors. The library is on [GitHub](https://github.com/adafruit/Adafruit_CircuitPython_BitbangIO). I will be adding an I2C module to the library soon as well.
 
 **Scott**
 
