--- a/_drafts/2020-04-21-draft.md
+++ b/_drafts/2020-04-21-draft.md
@@ -144,9 +144,11 @@ What is the team up to this week? Let’s check in!
 
 **Bryan**
 
-[![Bryan](../assets/20200mdd/20200mddbryan.jpg)](https://circuitpython.org/)
+Short week for me, so I wrapped up the LIS3DH library refactor to allow for the use of the H3LIS331 and LIS331HH, siblings of the LIS3DH. This type of refactor will likely become more and more common as sensor manufacturers look to expand their offerings by spinning off new products based on existing ones.
 
+[![Bryan](../assets/20200421/20200421bryan.jpg)](https://circuitpython.org/)
 
+Otherwise I started playing around with the [SSI2164 Quad Voltage Controller Amplifier made by Sound Semiconductor](http://www.soundsemiconductor.com/downloads/ssi2164datasheet.pdf). This chip is an update by Dave Rossum to his SSM2164 with a few improvements. I'm currently pairing it with an OPA4171 to bone up on my analog skills with an eye towards building filters and oscillators.
 
 **Dan**
 
