--- a/_drafts/2020-04-21-draft.md
+++ b/_drafts/2020-04-21-draft.md
@@ -152,9 +152,9 @@ Otherwise I started playing around with the [SSI2164 Quad Voltage Controller Amp
 
 **Dan**
 
-[![Dan](../assets/20200mdd/20200mdddan.jpg)](https://circuitpython.org/)
+I had to do another revision of the UF2 bootloader fixes for SAMD51, and fixed a regression on SAMD21. The latest version now works well, and is released as [v3.9.0](https://github.com/adafruit/uf2-samdx1/releases/tag/v3.9.0). All the SAMD51 board Learn Guides now have pages describing how to update the bootloader, and the v3.9.0 download links are now on [circuitpython.org](https://circuitpython.org/).
 
-
+I am now circling back to implementing the Adafruit BLE services needed to talk to the [Bluefruit Playground app](https://learn.adafruit.com/bluefruit-playground-app). We have an Arduino version of the board program for that app, and after I finish this [library](https://github.com/adafruit/Adafruit_CircuitPython_BLE_Adafruit), you'll be able to talk to the app in CircuitPython as well.
 
 **Jeff**
 
