--- a/_drafts/2020-04-21-draft.md
+++ b/_drafts/2020-04-21-draft.md
@@ -170,9 +170,9 @@ Work on RGB Matrix support in CircuitPython continues.  The initial Pull Request
 
 **Lucian**
 
-[![Lucian](../assets/20200mdd/20200mddlucian.jpg)](https://circuitpython.org/)
+These past two weeks I've been working on wrapping up the work on the STM32 H7 and F7 support, adding the F7 series of MCUs, support for Busio, revamped organization for linker files, internal flash improvements, and some file generation scripts with Python to make adding new boards more straightforward. When merged the STM32 port of Circuitpython will support two new boards, the Nucleo F767 and Nucleo H743, and will have dramatically improved flash performance across the entire port (simple testing suggests a 10x+ speed increase on most boards without external flash.)
 
-
+The H7 series has a staggering amount of RAM, 1MB in total, so I also added more advanced memory management to its startup code so it can take better advantage of its 480MHz processor speed. This code is similar to that used on the i.MX boards from NXP, and allows for very fast memory use via the TCM (tightly coupled RAM). Without it, code on processors this fast is bogged down by instruction and data accesses and can't make use of its full potential. The H7 is most often used for projects involving cameras or LCD screens. I'm hoping the sheer stats of this line of MCUs will allow new categories of project to be programmed in Circuitpython. 
 
 **Melissa**
 
