--- a/_drafts/2020-04-21-draft.md
+++ b/_drafts/2020-04-21-draft.md
@@ -164,9 +164,9 @@ Work on RGB Matrix support in CircuitPython continues.  The initial Pull Request
 
 **Kattni**
 
-[![Kattni](../assets/20200mdd/20200mddkattni.jpg)](https://circuitpython.org/)
+This week I finished up going through the Library Infrastructure Issues on the circuitpython.org [Contributing page](https://circuitpython.org/contributing). There's a series of checks that will always have something listed, but most of what can be "fixed" has been. Out of this project came some suggested updates to our Adabot script that generates the list to ensure we're getting the best possible information on that list. The updates to Adabot are in the works thanks to Sommersoft.
 
-
+We're continuing to submit our boards to OSHWA for certification and more approvals are coming in. Check out the [Certified Open Source Hardware Projects Directory](https://certification.oshwa.org/list.html?q=adafruit) to see all the Adafruit certified Open Source hardware.
 
 **Lucian**
 
