CP weekly, pydev, version numbers.

--- a/_drafts/2020-04-21-draft.md
+++ b/_drafts/2020-04-21-draft.md
@@ -107,6 +107,10 @@ Tweaking the Adafruit CircuitPython libraries for the MLX90640 IR sensor so that
 
 Mithi's Hexapod Robot Simulator provides a Python, numpy, and plotly based simulator for modeling hexapod robots - [GitHub](https://github.com/mithi/hexapod-robot-simulator).
 
+PyDev of the Week: Cheukting Ho on [Mouse vs Python](https://www.blog.pythonlibrary.org/2020/04/20/pydev-of-the-week-cheukting-ho/).
+
+CircuitPython Weekly for April 20th, 2020 on [YouTube](https://youtu.be/VxPNipNtgxk).
+
 #ICYDNCI What was the most popular, most clicked link, in [last week's newsletter](https://link)? [title](url).
 
 ## Made with Mu
@@ -262,13 +266,13 @@ As for other events, with the COVID pandemic, most in-person events are postpone
 
 ## Latest releases
 
-CircuitPython's stable release is [#.#.#](https://github.com/adafruit/circuitpython/releases/latest) and its unstable release is [#.#.#-##.#](https://github.com/adafruit/circuitpython/releases). New to CircuitPython? Start with our [Welcome to CircuitPython Guide](https://learn.adafruit.com/welcome-to-circuitpython).
+CircuitPython's stable release is [5.2.0](https://github.com/adafruit/circuitpython/releases/latest). New to CircuitPython? Start with our [Welcome to CircuitPython Guide](https://learn.adafruit.com/welcome-to-circuitpython).
 
-[2019####](https://github.com/adafruit/Adafruit_CircuitPython_Bundle/releases/latest) is the latest CircuitPython library bundle.
+[20190420](https://github.com/adafruit/Adafruit_CircuitPython_Bundle/releases/latest) is the latest CircuitPython library bundle.
 
-[v#.#.#](https://micropython.org/download) is the latest MicroPython release. Documentation for it is [here](http://docs.micropython.org/en/latest/pyboard/).
+[v1.12](https://micropython.org/download) is the latest MicroPython release. Documentation for it is [here](http://docs.micropython.org/en/latest/pyboard/).
 
-[#.#.#](https://www.python.org/downloads/) is the latest Python release. The latest pre-release version is [#.#.#](https://www.python.org/download/pre-releases/).
+[3.8.2](https://www.python.org/downloads/) is the latest Python release. The latest pre-release version is [3.9.0a5](https://www.python.org/download/pre-releases/).
 
 [1670 Stars](https://github.com/adafruit/circuitpython/stargazers) Like CircuitPython? [Star it on GitHub!](https://github.com/adafruit/circuitpython)
 
