--- a/_drafts/2020-04-21-draft.md
+++ b/_drafts/2020-04-21-draft.md
@@ -74,11 +74,15 @@ If you are looking at buying Adafruit products while the Adafruit NYC factory is
 
 [![Adafruit Development](../assets/20200421/20200421adafruit.jpg)](https://blog.adafruit.com/2020/04/19/4-19-2020-photos-and-videos-of-the-day-adafruitchronicles-americaworkstogether-newyorktough/)
 
-## Adafruit hardware being certified Open Source
+## Adafruit now has the most boards certified Open Source from OSHWA
 
 [![Adafruit Boards and OSHWA](../assets/20200421/20200421oshwa.jpg)](https://certification.oshwa.org/list.html?q=Adafruit)
 
-Adafruit has always been an open source hardware company, predating the [Open Source Hardware Association](https://oshwa.org) (OSHWA) certification process. We have begun submitting all of our hardware to OSHWA for certification as Open Source. Adafruit currently has 46 total boards certified. This week four new boards were certified including:
+Adafruit has always been an open source hardware company, predating the [Open Source Hardware Association](https://oshwa.org) (OSHWA) certification process. We have begun submitting all of our hardware to OSHWA for certification as Open Source. Adafruit currently has 54 total boards certified, the most of any one company!!
+
+Adafruit wishes to thank the community and all the contributors to open source software and hardware. And a special thanks to our customers for helping demonstrate you can release open-source hardware and software and be a good cause and good business.
+
+This week twelve new boards were certified this week including:
 
 * [Adafruit DS1307 Real Time Clock Assembled Breakout Board](https://certification.oshwa.org/us000281.html)
 * [Adafruit Metro M4](https://certification.oshwa.org/us000279.html)
