--- a/_drafts/2020-04-21-draft.md
+++ b/_drafts/2020-04-21-draft.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "Device Simulator adds CLUE, the last of Python 2, and more!"
+title: "Device Simulator adds CLUE, 54 OSHWA certified boards, and more!"
 date: 2020-04-21 07:00:00 -0800
 categories: weekly
 ---
