--- a/_drafts/2020-04-28-draft.md
+++ b/_drafts/2020-04-28-draft.md
@@ -5,7 +5,7 @@ date: 2020-02-11 07:00:00 -0800
 categories: weekly
 ---
 
-- [ ] Kattni updates
+- [X] Kattni updates
 - [ ] change date
 - [ ] update title
 - [ ] Feature story
@@ -76,13 +76,13 @@ Looking for adding a new board to CircuitPython? It's highly encouraged! Adafrui
 
 [![title](../assets/20200mdd/20200mdd-name.jpg)](https://learn.adafruit.com/)
 
-[title](url) from [name](url)
+[PyPortal Quarantine Clock](https://learn.adafruit.com/pyportal-quarantine-clock) from [Brent Rubell](https://learn.adafruit.com/users/brubell)
 
 ## Updated Guides - Now With More Python!
 
 **You can use CircuitPython libraries on Raspberry Pi!** We're updating all of our CircuitPython guides to show how to wire up sensors to your Raspberry Pi, and load the necessary CircuitPython libraries to get going using them with Python. We'll be including the updates here so you can easily keep track of which sensors are ready to go. Check it out!
 
-[title](url)
+Keep checking back for more updated guides!
 
 ## CircuitPython Libraries!
 
@@ -96,25 +96,33 @@ If you'd like to contribute, CircuitPython libraries are a great place to start.
 
 You can check out this [list of all the CircuitPython libraries and drivers available](https://github.com/adafruit/Adafruit_CircuitPython_Bundle/blob/master/circuitpython_library_list.md). 
 
-The current number of CircuitPython libraries is **###**!
+The current number of CircuitPython libraries is **226**!
 
 **New Libraries!**
 
 Here's this week's new CircuitPython libraries:
 
-* [library](url)
+ * [Adafruit_CircuitPython_FONA](https://github.com/adafruit/Adafruit_CircuitPython_FONA)
 
 **Updated Libraries!**
 
 Here's this week's updated CircuitPython libraries:
 
-* [library](url)
+ * [Adafruit_CircuitPython_Debouncer](https://github.com/adafruit/Adafruit_CircuitPython_Debouncer)
+ * [Adafruit_CircuitPython_RGB_Display](https://github.com/adafruit/Adafruit_CircuitPython_RGB_Display)
+ * [Adafruit_CircuitPython_LSM6DS](https://github.com/adafruit/Adafruit_CircuitPython_LSM6DS)
+ * [Adafruit_CircuitPython_BLE](https://github.com/adafruit/Adafruit_CircuitPython_BLE)
+ * [Adafruit_CircuitPython_MiniMQTT](https://github.com/adafruit/Adafruit_CircuitPython_MiniMQTT)
+ * [Adafruit_CircuitPython_AM2320](https://github.com/adafruit/Adafruit_CircuitPython_AM2320)
+ * [Adafruit_CircuitPython_ESP32SPI](https://github.com/adafruit/Adafruit_CircuitPython_ESP32SPI)
+ * [Adafruit_CircuitPython_LIS2MDL](https://github.com/adafruit/Adafruit_CircuitPython_LIS2MDL)
+ * [Adafruit_Blinka](https://github.com/adafruit/Adafruit_Blinka)
 
 **PyPI Download Stats!**
 
 We've written a special library called Adafruit Blinka that makes it possible to use CircuitPython Libraries on [Raspberry Pi and other compatible single-board computers](https://learn.adafruit.com/circuitpython-on-raspberrypi-linux/). Adafruit Blinka and all the CircuitPython libraries have been deployed to PyPI for super simple installation on Linux! Here are the top 10 CircuitPython libraries downloaded from PyPI in the last week, including the total downloads for those libraries:
 
-KATTNI TABLE HERE
+Keep an eye out here for updated download stats coming soon!
 
 ## What’s the team up to this week?
 
@@ -196,7 +204,7 @@ CircuitPython's stable release is [#.#.#](https://github.com/adafruit/circuitpyt
 
 [#.#.#](https://www.python.org/downloads/) is the latest Python release. The latest pre-release version is [#.#.#](https://www.python.org/download/pre-releases/).
 
-[### Stars](https://github.com/adafruit/circuitpython/stargazers) Like CircuitPython? [Star it on GitHub!](https://github.com/adafruit/circuitpython)
+[1676 Stars](https://github.com/adafruit/circuitpython/stargazers) Like CircuitPython? [Star it on GitHub!](https://github.com/adafruit/circuitpython)
 
 ## Call for help – CircuitPython messaging to other languages!
 
