--- a/_drafts/2020-04-28-draft.md
+++ b/_drafts/2020-04-28-draft.md
@@ -39,9 +39,11 @@ The CircuitPython team is going full steam ahead in development and rollout. We'
 
 [![Adafruit Boards and OSHWA](../assets/2020mmdd/2020mmdd-oshwa.jpg)](https://certification.oshwa.org/list.html?q=Adafruit)
 
-Adafruit has always been an open source hardware company, predating the [Open Source Hardware Association](https://oshwa.org) (OSHWA) certification process. We have begun submitting all of our hardware to OSHWA for certification as Open Source. This week **NNN** new boards were certified including:
+Adafruit has always been an open source hardware company, predating the [Open Source Hardware Association](https://oshwa.org) (OSHWA) certification process. We have begun submitting all of our hardware to OSHWA for certification as Open Source. This week **48** new boards were certified including:
 
-* [Board-name](url)
+* [Adafruit Feather M0 WiFi](https://www.adafruit.com/product/3061)
+* [Adafruit Crickit for Circuit Playground Express](https://www.adafruit.com/product/3093)
+* [Adafruit Monster M4SK](https://www.adafruit.com/product/4343)
 
 ## News from around the web!
 
