--- a/_drafts/2020-04-28-draft.md
+++ b/_drafts/2020-04-28-draft.md
@@ -27,7 +27,7 @@ Text
 
 ## Adafruit Update
 
-[![Adafruit Heart New York](../assets/20200mdd/03312020heart.jpg)](https://blog.adafruit.com/2020/03/22/covid/)
+[![Adafruit Heart New York](../assets/20200428/heart.jpg)](https://blog.adafruit.com/2020/03/22/covid/)
 
 Adafruit Industries continues to run with 100% of employees being paid and continuing to work. Most are working remotely, with some working in the Manhattan, New York factory as an essential service and business under NYC Executive Order 202.6 Capabilities. Adafruit was deemed an essential service to distribute/make some PPE (Personal Protection Equipment) such as face shields, and manufacturer electronics for essential life-saving/preserving equipment and development which is needed in New York and beyond. -[Blog](https://blog.adafruit.com/2020/03/22/covid/)
 
@@ -37,7 +37,7 @@ The CircuitPython team is going full steam ahead in development and rollout. We'
 
 ## Adafruit hardware being certified Open Source
 
-[![Adafruit Boards and OSHWA](../assets/2020mmdd/2020mmdd-oshwa.jpg)](https://certification.oshwa.org/list.html?q=Adafruit)
+[![Adafruit Boards and OSHWA](../assets/2020m428/oshwa.jpg)](https://certification.oshwa.org/list.html?q=Adafruit)
 
 Adafruit has always been an open source hardware company, predating the [Open Source Hardware Association](https://oshwa.org) (OSHWA) certification process. We have begun submitting all of our hardware to OSHWA for certification as Open Source. This week **48** new boards were certified including:
 
@@ -47,7 +47,7 @@ Adafruit has always been an open source hardware company, predating the [Open So
 
 ## News from around the web!
 
-[![title](../assets/20200mdd/20200mdd-name.jpg)](https://circuitpython.org/)
+[![title](../assets/20200428/20200mdd-name.jpg)](https://circuitpython.org/)
 
 Text
 
@@ -76,7 +76,7 @@ Looking for adding a new board to CircuitPython? It's highly encouraged! Adafrui
 
 ## New Learn Guides!
 
-[![title](../assets/20200mdd/20200mdd-name.jpg)](https://learn.adafruit.com/)
+[![title](../assets/20200428/20200mdd-name.jpg)](https://learn.adafruit.com/)
 
 [PyPortal Quarantine Clock](https://learn.adafruit.com/pyportal-quarantine-clock) from [Brent Rubell](https://learn.adafruit.com/users/brubell)
 
@@ -88,7 +88,7 @@ Keep checking back for more updated guides!
 
 ## CircuitPython Libraries!
 
-[![CircuitPython Libraries](../assets/20200mdd/20200mdd-blinka.png)](https://circuitpython.org/libraries)
+[![CircuitPython Libraries](../assets/20200428/blinka.png)](https://circuitpython.org/libraries)
 
 CircuitPython support for hardware continues to grow. We are adding support for new sensors and breakouts all the time, as well as improving on the drivers we already have. As we add more libraries and update current ones, you can keep up with all the changes right here!
 
@@ -132,49 +132,49 @@ What is the team up to this week? Let’s check in!
 
 **Bryan**
 
-[![Bryan](../assets/20200mdd/20200mddbryan.jpg)](https://circuitpython.org/)
+[![Bryan](../assets/20200428/20200428bryan.jpg)](https://circuitpython.org/)
 
 
 
 **Dan**
 
-[![Dan](../assets/20200mdd/20200mdddan.jpg)](https://circuitpython.org/)
+[![Dan](../assets/20200428/20200428dan.jpg)](https://circuitpython.org/)
 
 
 
 **Jeff**
 
-[![Jeff](../assets/20200mdd/20200mddjeff.jpg)](https://circuitpython.org/)
+[![Jeff](../assets/20200428/20200428jeff.jpg)](https://circuitpython.org/)
 
 
 
 **Kattni**
 
-[![Kattni](../assets/20200mdd/20200mddkattni.jpg)](https://circuitpython.org/)
+[![Kattni](../assets/20200428/20200428kattni.jpg)](https://circuitpython.org/)
 
 
 
 **Lucian**
 
-[![Lucian](../assets/20200mdd/20200mddlucian.jpg)](https://circuitpython.org/)
+[![Lucian](../assets/20200428/20200428lucian.jpg)](https://circuitpython.org/)
 
 
 
 **Melissa**
 
-[![Melissa](../assets/20200mdd/20200mddmelissa.jpg)](https://circuitpython.org/)
+[![Melissa](../assets/20200428/20200428melissa.jpg)](https://circuitpython.org/)
 
 
 
 **Scott**
 
-[![Scott](../assets/20200mdd/20200mddscott.jpg)](https://circuitpython.org/)
+[![Scott](../assets/20200428/20200428scott.jpg)](https://circuitpython.org/)
 
 
 
 ## Upcoming events!
 
-[![PyCon US 2020](../assets/20200407/20200407pycon.jpg)](https://us.pycon.org/2020/remote/)
+[![PyCon US 2020](../assets/20200428/pycon.jpg)](https://us.pycon.org/2020/remote/)
 
 The PyCon US 2020 team announces planned talks, tutorials, posters, and much more online. 
 
@@ -188,9 +188,9 @@ To participate, Go to the [PyCon US 2020 Remote page](https://us.pycon.org/2020/
 
 The organizers appreciate the community’s patience as they work through the logistics of gathering and uploading the recordings.  The goal is to begin providing content about April 15, 2020, right when PyCon was scheduled to begin.
 
-[![IoTFuse2020](../assets/20200407/20200407iotfuse.jpg)](https://iotfuse.com/)
+[![event](../assets/20200428/event.jpg)](https://)
 
-IoTFuse is being billed as the world's first IoT-enabled virtual conference. April 14-16, 2020 - [Website](https://iotfuse.com/)
+text - [Website](https://)
 
 **Send Your Events In**
 
@@ -210,7 +210,7 @@ CircuitPython's stable release is [#.#.#](https://github.com/adafruit/circuitpyt
 
 ## Call for help – CircuitPython messaging to other languages!
 
-[![Hello world](../assets/DIR-LOCATION/DATE-helloworld.jpg)](https://github.com/adafruit/circuitpython/issues/1098)
+[![Hello world](../assets/20200428/helloworld.jpg)](https://github.com/adafruit/circuitpython/issues/1098)
 
 We [recently posted on the Adafruit blog](https://blog.adafruit.com/2018/08/15/help-bring-circuitpython-messaging-to-other-languages-circuitpython/) about bringing CircuitPython messaging to other languages, one of the exciting features of CircuitPython 4 and later versions is translated control and error messages. Native language messages will help non-native English speakers understand what is happening in CircuitPython even though the Python keywords and APIs will still be in English. If you would like to help, [please post](https://github.com/adafruit/circuitpython/issues/1098) to the main issue on GitHub and join us on [Discord](https://adafru.it/discord).
 
@@ -218,13 +218,13 @@ We made this graphic with translated text, we could use your help with that to m
 
 ## jobs.adafruit.com - Find a dream job, find great candidates!
 
-[![jobs.adafruit.com](../assets/DIR-LOCATION/DATE-jobs.jpg)](https://jobs.adafruit.com/)
+[![jobs.adafruit.com](../assets/20200428/jobs.jpg)](https://jobs.adafruit.com/)
 
 [jobs.adafruit.com](https://jobs.adafruit.com/) has returned and folks are posting their skills (including CircuitPython) and companies are looking for talented makers to join their companies - from Digi-Key, to Hackaday, Microcenter, Raspberry Pi and more.
 
 ## NUMBER thanks!
 
-[![NUMBER THANKS](../assets/DIR-LOCATION/DATE-17kdiscord.jpg)](https://adafru.it/discord)
+[![NUMBER THANKS](../assets/20200428/18kdiscord.jpg)](https://adafru.it/discord)
 
 [![Adafruit Discord](https://discordapp.com/api/guilds/327254708534116352/embed.png?style=banner3)](https://discord.gg/adafruit)
 
@@ -232,7 +232,7 @@ The Adafruit Discord community, where we do all our CircuitPython development in
 
 ## ICYMI - In case you missed it
 
-[![ICYMI](../assets/DIR-LOCATION/DATE-icymi.jpg)](https://www.youtube.com/playlist?list=PLjF7R1fz_OOXRMjM7Sm0J2Xt6H81TdDev)
+[![ICYMI](../assets/20200428/icymi.jpg)](https://www.youtube.com/playlist?list=PLjF7R1fz_OOXRMjM7Sm0J2Xt6H81TdDev)
 
 The wonderful world of Python on hardware! This is our first video-newsletter-podcast that we’ve started! The news comes from the Python community, Discord, Adafruit communities and more. It’s part of the weekly newsletter, then we have a segment on ASK an ENGINEER and this is the video slice from that! The complete Python on Hardware weekly videocast [playlist is here](https://www.youtube.com/playlist?list=PLjF7R1fz_OOXRMjM7Sm0J2Xt6H81TdDev). 
 
@@ -244,7 +244,7 @@ And lastly, we are working up a one-spot destination for all things podcast-able
 
 ## Codecademy "Learn Hardware Programming with CircuitPython"
 
-[![Codecademy CircuitPython](../assets/DIR-LOCATION/DATE-codecademy_python.png)](https://www.codecademy.com/learn/learn-circuitpython?utm_source=adafruit&utm_medium=partners&utm_campaign=circuitplayground&utm_content=pythononhardwarenewsletter)
+[![Codecademy CircuitPython](../assets/20200428/codecademy_python.png)](https://www.codecademy.com/learn/learn-circuitpython?utm_source=adafruit&utm_medium=partners&utm_campaign=circuitplayground&utm_content=pythononhardwarenewsletter)
 
 Codecademy, an online interactive learning platform used by more than 45 million people, has teamed up with the leading manufacturer in STEAM electronics, Adafruit Industries, to create a coding course, "Learn Hardware Programming with CircuitPython". The course is now available in the [Codecademy catalog](https://www.codecademy.com/learn/learn-circuitpython?utm_source=adafruit&utm_medium=partners&utm_campaign=circuitplayground&utm_content=pythononhardwarenewsletter).
 
