--- a/_drafts/2020-04-28-draft.md
+++ b/_drafts/2020-04-28-draft.md
@@ -47,9 +47,9 @@ Adafruit has always been an open source hardware company, predating the [Open So
 
 ## News from around the web!
 
-[![title](../assets/20200428/20200mdd-name.jpg)](https://circuitpython.org/)
+[![Designing Winterbloom's Big Honking Button](../assets/20200428/20200428bhb.jpg)](https://blog.thea.codes/designing-big-honking-button/)
 
-Text
+Designing Winterbloom's Big Honking Button, programmable in CircuitPython - [thea.codes](https://blog.thea.codes/designing-big-honking-button/)
 
 #ICYDNCI What was the most popular, most clicked link, in [last week's newsletter](https://link)? [title](url).
 
