--- a/_drafts/2020-04-28-draft.md
+++ b/_drafts/2020-04-28-draft.md
@@ -281,9 +281,9 @@ We've finished submitting all of the Adafruit hardware to the [Open Source Hardw
 
 **Lucian**
 
-[![Lucian](../assets/20200428/20200428lucian.jpg)](https://circuitpython.org/)
+This past week I worked mostly on documentation settings and reviews for the STM port. For some time, the ST dev boards for CircuitPython did not list their supported modules correctly in the Support Matrix. This week I revisited the reasons why, and ended up revising a number of flags across the build process, making the process of developing a new port more standard across all of CircuitPython. I also worked on reviewing some submitted bugfix PRs, and the additions of the F746 Discovery and F746 Nucleo boards. This coming week, I'll be diving into the documentation for i.MX boards and doing further structural reviews once Scott's low-power code is merged. 
 
-
+Outside my port work, I've been working with a friend on developing a new minimal STM32 dev board for CircuitPython that we're hoping to launch in the next few months. Our hope is to make a tiny, castellated module that can be easily inserted into a prototype design, and then copied as an eagle design bloc when the design is ready for assembly. We'll hopefully have some pictures to show in the coming weeks. 
 
 **Melissa**
 
