Add versions, meeting vid and pydev of week

--- a/_drafts/2020-04-28-draft.md
+++ b/_drafts/2020-04-28-draft.md
@@ -166,6 +166,10 @@ uPython - MicroPython scripts for an ESP8266 board - [GitHub](https://github.com
 
 wasp-os: a MicroPython-based development environment for smart watches - [GitHub](https://github.com/daniel-thompson/wasp-os) and [Twitter](https://twitter.com/steveamor/status/1254784419467935744).
 
+PyDev of the Week: Gaetan Delannay on [Mouse vs Python](https://www.blog.pythonlibrary.org/2020/04/27/pydev-of-the-week-gaetan-delannay/)
+
+CircuitPython Weekly for 27 April 2020 [on YouTube](https://youtu.be/Fyjpvj9hRrU) and [on diode.zone](https://diode.zone/videos/watch/1f0a5f2d-b959-44cd-946c-8c5a1aae2eb8)
+
 #ICYDNCI What was the most popular, most clicked link, in [last week's newsletter](https://www.adafruitdaily.com/2020/04/21/device-simulator-adds-clue-54-oshwa-certified-boards-and-more-python-adafruit-circuitpython-circuitpython-micropython-thepsf/)? [Visual Studio Code - Device Simulator Express](https://marketplace.visualstudio.com/items?itemName=ms-python.devicesimulatorexpress).
 
 ## Twitter Responds to Call for Information on Python on Hardware
@@ -353,13 +357,13 @@ As for other events, with the COVID pandemic, most in-person events are postpone
 
 ## Latest releases
 
-CircuitPython's stable release is [#.#.#](https://github.com/adafruit/circuitpython/releases/latest) and its unstable release is [#.#.#-##.#](https://github.com/adafruit/circuitpython/releases). New to CircuitPython? Start with our [Welcome to CircuitPython Guide](https://learn.adafruit.com/welcome-to-circuitpython).
+CircuitPython's stable release is [5.2.0](https://github.com/adafruit/circuitpython/releases/latest) and its unstable release is [5.3.0-rc.0](https://github.com/adafruit/circuitpython/releases). New to CircuitPython? Start with our [Welcome to CircuitPython Guide](https://learn.adafruit.com/welcome-to-circuitpython).
 
-[2019####](https://github.com/adafruit/Adafruit_CircuitPython_Bundle/releases/latest) is the latest CircuitPython library bundle.
+[20200425](https://github.com/adafruit/Adafruit_CircuitPython_Bundle/releases/latest) is the latest CircuitPython library bundle.
 
-[v#.#.#](https://micropython.org/download) is the latest MicroPython release. Documentation for it is [here](http://docs.micropython.org/en/latest/pyboard/).
+[v1.12](https://micropython.org/download) is the latest MicroPython release. Documentation for it is [here](http://docs.micropython.org/en/latest/pyboard/).
 
-[#.#.#](https://www.python.org/downloads/) is the latest Python release. The latest pre-release version is [#.#.#](https://www.python.org/download/pre-releases/).
+[3.8.2](https://www.python.org/downloads/) is the latest Python release. The latest pre-release version is [3.9.0a5](https://www.python.org/download/pre-releases/).
 
 [1676 Stars](https://github.com/adafruit/circuitpython/stargazers) Like CircuitPython? [Star it on GitHub!](https://github.com/adafruit/circuitpython)
 
